# raspberry-pi-soil-moisture-sensor

./: README.md  main.py  pyproject.toml
