[project]
name = "raspberry-pi-soil-moisture-sensor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["gpiozero>=2.0.1", "pigpio>=1.78"]

[[tool.mypy.overrides]]
module = ["gpiozero", "gpiozero.pins.pigpio"]
ignore_missing_imports = true
